# Tagged-object-removal

./: .gitmodules  FCN_segmentation_sample.ipynb  FCN_segmentation_testing.ipynb  README.md
app/: .gitignore  CMakeLists.txt  Readme.md
app/python/: deeplab.py  lama_client.py  python_module.py
app/src/: CMakeLists.txt
app/src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
app/src/executable/: CMakeLists.txt  main.cpp
app/src/modules/: CMakeLists.txt
app/src/modules/NetworkExecutor/: CMakeLists.txt  NetworkExecutor.cpp  NetworkExecutor.h
app/src/modules/RxQtLoop/: CMakeLists.txt  rxqt_loop_singleton.cpp  rxqt_loop_singleton.h
app/src/ui/: CMakeLists.txt
app/src/ui/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
app/src/ui/ViewInterface/: CMakeLists.txt  ViewInterface.h
app/submodules/: CMakeLists.txt
deeplab/: .gitignore  deeplab.py  example-deeplab-2.ipynb  main.py  requirements.txt  utils.py
lama/: client.py  predictor.py  server.py
